--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,7 @@
 <div class="d-flex justify-content-between align-items-center flex-wrap p-1 text-white px-lg-2" style="background-color: #256188">
-  <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-sharp fa-light fa-gears mx-2"></i> ProjectTracker </div>
+  <%= link_to root_path, class:"text-white" do %>
+    <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-sharp fa-light fa-gears mx-2"></i> ProjectTracker </div>
+  <% end %>
   <div><i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
     <%= link_to "/logout", method: :post do %>
       <i class="fa fa-solid fa-right-from-bracket mx-3" style="color:#fff"></i>
@@ -42,14 +44,16 @@
               <i class="fa fa-solid fa-up-right-from-square mx-2"></i>
             </a>
           </div>
-          <div class="card-body">
-            <h5 class="card-title"><%= project.name %></h5>
-            <div class="d-flex justify-content-end">
-              <div class="icon-container">
-                <%= User.find(project.user_id).username[0].upcase %>
+          <a href="/projects/<%= project.id %>" style="cursor:pointer;">
+            <div class="card-body">
+              <h5 class="card-title text-dark"><%= project.name %></h5>
+              <div class="d-flex justify-content-end">
+                <div class="icon-container">
+                  <%= User.find(project.user_id).username[0].upcase %>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     <% end %>
