--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,9 @@
 <%= javascript_include_tag 'detail' %>
 <div id="toast-container" class="toast-container"></div>
 <div class="d-flex justify-content-between align-items-center flex-wrap p-1 py-2 text-white px-lg-2" style="background-color: #256188">
-  <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %> </div>
+  <a href="/" style="text-decoration:none; color: white">
+    <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %> </div>
+  </a>
   <div class="mx-3 d-flex flex-row justify-content-center align-item-center">
     <%= form_for :search_items, url: search_items_path, method: :get, html: { class: "form-inline mx-5" } do |form| %>
       <%= form.hidden_field :project_id, value: @project.id %>
@@ -53,30 +55,34 @@
           <span >Backlog</span>
         </div>
       </li>
-      <li class="menu-collapsed">
+      <%#li class="menu-collapsed">
         <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
           <i class="fa fa-sharp fa-regular fa-user mx-4 fa-lg"></i>
           <span>Profile</span>
         </div>
-      </li>
-      <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-          <i class="fa fa-sharp fa-solid fa-folder-open mx-4 fa-lg"></i>
-          <span >All Projects</span>
-        </div>
-      </li>
-      <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-          <i class="fa fa-duotone fa-users fa-sharp fa-solid mx-4 fa-lg"></i>
-          <span >Users</span>
-        </div>
-      </li>
-      <li  class="menu-collapsed">
+      </li%>
+      <%= link_to projects_path do %>
+        <li class="menu-collapsed">
+          <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+            <i class="fa fa-sharp fa-solid fa-folder-open mx-4 fa-lg"></i>
+            <span >All Projects</span>
+          </div>
+        </li>
+      <% end %>
+      <%= link_to project_adduser_path(@project.id) do %>
+        <li class="menu-collapsed">
+          <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+            <i class="fa fa-duotone fa-users fa-sharp fa-solid mx-4 fa-lg"></i>
+            <span >Users</span>
+          </div>
+        </li>
+      <% end %>
+      <%#li  class="menu-collapsed">
         <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
           <i class="fa fa-solid fa-gear mx-4 fa-lg"></i>
           <span>Settings</span>
         </div>
-      </li>
+      </li%>
       <li class="menu-collapsed">
         <div class="d-flex w-100 justify-content-start align-items-center text-white my-4" onClick="window.location.href='/logout'">
           <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
